[package]
name = "sensorhub-rs"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "A Rust library for embedded MCUs to communicate with PC hosts, enabling rapid prototyping and validation of various sensors."
readme = "README.md"
keywords = ["sensor", "hub", "embedded",  "communication", "prototype"]
categories = ["embedded"]

[dependencies]
crc = "3.3.0"
log = "0.4.27"
num_enum = "0.7.4"
prost = "0.14.1"
prost-types = "0.14.1"
strum = { version = "0.27.1", features = ["derive", "strum_macros"] }
strum_macros = "0.27.1"

[build-dependencies]
prost-build = "0.14.1"
